--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -422,6 +422,8 @@
     <string name="political_profile">Political Profile</string>
     <string name="business_profile">Business Profile</string>
     <string name="welcome_back">Welcome back</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
