--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,7 +54,7 @@
     <string name="menu_exit">Exit</string>
 
     <string name="latest_festivals">Latest Festivals</string>
-    <string name="upcoming_festivals">Upcoming  Festivals</string>
+    <string name="upcoming_festivals">दिनविशेष</string>
     <string name="trending">Trending</string>
     <string name="business_category">Business Category</string>
     <string name="view_all">See all</string>
